[tool.poetry]
name = "mycalc2"
version = "0.1.0"
description = "A simple calc library"
license = "MIT"
readme = "README.md"
authors=["s4sarath"]
homepage = "https://github.com/s4sarath/mycalc2"
repository = "https://github.com/s4sarath/mycalc2"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
coverage = {extras = ["toml"], version = "^5.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-import-order = "^0.18.1"
isort = "^5.6.4"
flake8-bugbear = "^20.1.4"
codecov = "^2.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mycalc2"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
